--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -8,7 +8,7 @@
     <span>Добро пожаловать на</span>
     <br>
     <img src="assets/img/W-logo.svg" class="logo-img2">
-    <span class="title">WorkPoint</span>
+    <a class="title" routerLink="/main">WorkPoint</a>
   </div>
 
   <div class="card-right-side">
