--- a/src/app/components/main-webpage/coworkings-list/coworkings-list.component.html
+++ b/src/app/components/main-webpage/coworkings-list/coworkings-list.component.html
@@ -14,8 +14,8 @@
 
   <div class="coworking-info-container">
 
-    <div>
-      <img src="{{coworking.photo[0]}}" alt="img" width="480" height="415" class="coworking-image">
+    <div class="coworking-image">
+      <img src="{{coworking.photo[0]}}" alt="img">
     </div>
 
     <div class="coworking-content">
