--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
 
     </div>
     <a class="title" routerLink="/">WorkPoint</a>
-    <img src="assets/img/location.svg" class="location-img" alt="location" widht="14" height="16">
+    <img src="assets/img/location.svg" class="location-img" alt="location">
     <p class="location-name">Екатеринбург</p>
   </div>
 
@@ -12,11 +12,11 @@
     <button type="button" class="btn-add-coworking" routerLink="/main/add">Добавить место</button>
 
     <button type="button" class="btn-notification">
-      <img src="assets/img/notification.svg" alt="notification" width="20" height="22">
+      <img src="assets/img/notification.svg" alt="notification" class="btn-notification-img">
     </button>
 
     <a routerLink="/profile" class="profile-img">
-      <img src="assets/img/profile.png" alt="profile" width="80" height="80">
+      <img src="assets/img/profile.png" alt="profile" class="profile-img-img">
     </a>
 
     <div class="dropdown">
@@ -40,7 +40,7 @@
 
     <div>
       <button class="btn-settings" (click)="ifClicked = !ifClicked">
-        <img src="assets/img/settings.svg" alt="settings" width="13" height="13">
+        <img src="assets/img/settings.svg" alt="settings" class="btn-settings-img">
       </button>
 
     </div>
