--- a/src/app/shared/footer/footer.component.css
+++ b/src/app/shared/footer/footer.component.css
@@ -1,86 +1,177 @@
-.footer-container {
-  display: flex;
-  width: 100%;
-  height: 300px;
-  background: #E0E0D6;
+@media screen and (max-width: 5000px) {
+  .footer-container {
+    display: flex;
+    width: 100%;
+    height: 300px;
+    background: #E0E0D6;
+  }
+
+  .footer-logo-container {
+    padding-top: 79px;
+    padding-left: 160px;
+    margin-right: 237px;
+  }
+
+  .politics {
+    margin-top: 23px;
+    margin-bottom: 10px;
+  }
+
+  .footer-logo-container p {
+    font-size: 10px;
+    color: #FFFFFF;
+  }
+
+  .footer-part-one {
+    padding-top: 77px;
+    margin-right: 64px;
+  }
+
+  .footer-part-one li {
+    font-weight: 300;
+    font-size: 15px;
+    margin-bottom: 13px;
+  }
+
+  .footer-part-one li:last-child {
+    margin-bottom: 0;
+  }
+
+  .footer-part-one .main-page {
+    font-weight: 400;
+    line-height: 30px;
+    font-size: 22px;
+  }
+
+  .footer-part-two {
+    padding-top: 77px;
+    font-size: 15px;
+    margin-right: 493px;
+  }
+
+  .footer-part-two li {
+    font-weight: 300;
+    font-size: 15px;
+    margin-bottom: 13px;
+  }
+
+  .footer-part-two li:last-child {
+    margin-bottom: 0;
+  }
+
+  .footer-part-two .profile {
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 30px;
+  }
+
+  .footer-part-three {
+    padding-top: 77px;
+    font-size: 15px;
+  }
+
+  .footer-part-three li {
+    font-weight: 300;
+    font-size: 15px;
+    margin-bottom: 13px;
+  }
+
+  .footer-part-three li:last-child {
+    margin-bottom: 0;
+  }
+
+  .footer-part-three .contacts {
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 30px;
+  }
 }
 
-.footer-logo-container {
-  padding-top: 79px;
-  padding-left: 160px;
-  margin-right: 237px;
-}
+@media screen and (max-width: 1550px) {
+  .footer-container {
+    display: flex;
+    width: 100%;
+    height: 213px;
+    background: #E0E0D6;
+  }
 
-.politics {
-  margin-top: 23px;
-  margin-bottom: 10px;
-}
+  .footer-logo-container {
+    padding-top: 56.09px;
+    padding-left: 113.6px;
+    margin-right: 168.27px;
+  }
 
-.footer-logo-container p {
-  font-size: 10px;
-  color: #FFFFFF;
-}
+  .politics {
+    margin-top: 16.33px;
+    margin-bottom: 7.1px;
+  }
 
-.footer-part-one {
-  padding-top: 77px;
-  margin-right: 64px;
-}
+  .footer-logo-container p {
+    font-size: 7.1px;
+    color: #FFFFFF;
+  }
 
-.footer-part-one li {
-  font-weight: 300;
-  font-size: 15px;
-  margin-bottom: 13px;
-}
+  .footer-part-one {
+    padding-top: 54.67px;
+    margin-right: 45.44px;
+  }
 
-.footer-part-one li:last-child {
-  margin-bottom: 0;
-}
+  .footer-part-one li {
+    font-weight: 300;
+    font-size: 10.65px;
+    margin-bottom: 9.23px;
+  }
 
-.footer-part-one .main-page {
-  font-weight: 400;
-  line-height: 30px;
-  font-size: 22px;
-}
+  .footer-part-one li:last-child {
+    margin-bottom: 0;
+  }
 
-.footer-part-two {
-  padding-top: 77px;
-  font-size: 15px;
-  margin-right: 493px;
-}
+  .footer-part-one .main-page {
+    font-weight: 400;
+    line-height: 21.3px;
+    font-size: 15.62px;
+  }
 
-.footer-part-two li {
-  font-weight: 300;
-  font-size: 15px;
-  margin-bottom: 13px;
-}
+  .footer-part-two {
+    padding-top: 54.67px;
+    font-size: 10.65px;
+    margin-right: 350px;
+  }
 
-.footer-part-two li:last-child {
-  margin-bottom: 0;
-}
+  .footer-part-two li {
+    font-weight: 300;
+    font-size: 10.65px;
+    margin-bottom: 9.23px;
+  }
 
-.footer-part-two .profile {
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 30px;
-}
+  .footer-part-two li:last-child {
+    margin-bottom: 0;
+  }
 
-.footer-part-three {
-  padding-top: 77px;
-  font-size: 15px;
-}
+  .footer-part-two .profile {
+    font-weight: 400;
+    font-size: 15.65px;
+    line-height: 21.3px;
+  }
 
-.footer-part-three li {
-  font-weight: 300;
-  font-size: 15px;
-  margin-bottom: 13px;
-}
+  .footer-part-three {
+    padding-top: 54.67px;
+    font-size: 10.65px;
+  }
 
-.footer-part-three li:last-child {
-  margin-bottom: 0;
-}
+  .footer-part-three li {
+    font-weight: 300;
+    font-size: 10.65px;
+    margin-bottom: 9.23px;
+  }
 
-.footer-part-three .contacts {
-  font-weight: 400;
-  font-size: 22px;
-  line-height: 30px;
+  .footer-part-three li:last-child {
+    margin-bottom: 0;
+  }
+
+  .footer-part-three .contacts {
+    font-weight: 400;
+    font-size: 15.62px;
+    line-height: 21.3px;
+  }
 }
