--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,128 +1,299 @@
-.header-container {
-  display: flex;
-  width: 1600px;
-  height: 75px;
-  margin-left: 160px;
-  margin-top: 50px;
-  border-bottom: 2px solid #e9e9e9;
-  justify-content: space-between;
-  padding-bottom: 5px;
+@media screen and (max-width: 5000px) {
+  .header-container {
+    display: flex;
+    width: 1600px;
+    height: 75px;
+    margin-left: 160px;
+    margin-top: 50px;
+    border-bottom: 2px solid #e9e9e9;
+    justify-content: space-between;
+    padding-bottom: 5px;
+  }
+
+  .header-left-side {
+    display: flex;
+    vertical-align: middle;
+    align-items: center;
+  }
+
+  .header-right-side {
+    display: flex;
+    vertical-align: middle;
+    align-items: center;
+  }
+
+  .title {
+    font-family: 'Open Sans';
+    font-weight: 300;
+    font-size: 48px;
+    line-height: 65px;
+    margin-right: 19px;
+  }
+
+  .logo-img {
+    position: absolute;
+    width: 50px;
+    height: 49.74px;
+    left: 153px;
+    top: 60px;
+
+    background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
+    filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
+    transform: rotate(117.88deg);
+    border-radius: 50%;
+  }
+
+  .location-img {
+    width: 14px;
+    height: 16px;
+    margin-top: 10px;
+    margin-right: 13px;
+  }
+
+  .location-name {
+    margin-top: 10px;
+  }
+
+  .btn-add-coworking {
+    background: #E0E0D6;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+    border-radius: 10px;
+    width: 211px;
+    height: 54px;
+    margin-right: 29px;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 28px;
+    color: rgba(27, 31, 59, 0.6);
+  }
+
+  .btn-notification {
+    width: 20px;
+    height: 22px;
+    margin-right: 42px;
+  }
+
+  .btn-notification-img {
+    width: 20px;
+    height: 22px;
+  }
+
+  .profile-img {
+    margin-right: 17px;
+    width: 80px;
+    height: 80px;
+  }
+
+  .profile-img-img {
+    width: 80px;
+    height: 80px;
+  }
+
+  .profile-name {
+    font-size: 15px;
+    line-height: 28px;
+    color: rgba(27, 31, 59, 0.8);
+  }
+
+  .dropdown {
+    position: relative;
+    margin-top: 160px;
+  }
+
+  .dropdown-menu {
+    padding-top: 13px;
+    background: #FBFBF5;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 7px;
+    visibility: hidden;
+    opacity: 0;
+    z-index: -1;
+    transition: all .2s ease-out;
+  }
+
+  .dropdown-menu.show {
+    z-index: 99;
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .dropdown-menu a {
+    display: block;
+    color: #494C62;
+    padding: 11px 11px;
+    opacity: 0.7;
+  }
+
+  .dropdown-menu a:hover {
+    opacity: 1;
+  }
+
+  .btn-settings {
+    height: 10px;
+    width: 10px;
+    position: relative;
+  }
+
+  .btn-settings-img {
+    height: 10px;
+    width: 10px;
+  }
+
+  .settings li {
+    position: relative;
+  }
+
+  /* .settings li a {
+    display: block;
+  } */
 }
 
-.header-left-side {
-  display: flex;
-  vertical-align: middle;
-  align-items: center;
+@media screen and (max-width: 1550px) {
+  .header-container {
+    display: flex;
+    width: 1136px;
+    height: 53.25px;
+    margin-left: 113.6px;
+    margin-top: 35.5px;
+    border-bottom: 1.42px solid #e9e9e9;
+    justify-content: space-between;
+    padding-bottom: 3.55px;
+  }
+
+  .header-left-side {
+    display: flex;
+    vertical-align: middle;
+    align-items: center;
+  }
+
+  .header-right-side {
+    display: flex;
+    vertical-align: middle;
+    align-items: center;
+  }
+
+  .title {
+    font-family: 'Open Sans';
+    font-weight: 300;
+    font-size: 34px;
+    line-height: 46.15px;
+    margin-right: 13.5px;
+  }
+
+  .logo-img {
+    position: absolute;
+    width: 35.5px;
+    height: 35.315px;
+    left: 108.63px;
+    top: 42.6px;
+
+    background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
+    filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
+    transform: rotate(117.88deg);
+    border-radius: 50%;
+  }
+
+  .location-img {
+    width: 9.94px;
+    height: 11.36px;
+    margin-top: 7.1px;
+    margin-right: 9.23px;
+  }
+
+  .location-name {
+    margin-top: 7.1px;
+  }
+
+  .btn-add-coworking {
+    background: #E0E0D6;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
+    border-radius: 10px;
+    width: 149.8px;
+    height: 38.34px;
+    margin-right: 20.59px;
+    font-weight: 600;
+    font-size: 10.65px;
+    line-height: 19.88px;
+    color: rgba(27, 31, 59, 0.6);
+  }
+
+  .btn-notification {
+    width: 14.2px;
+    height: 15.62px;
+    margin-right: 29.82px;
+  }
+
+  .btn-notification-img {
+    width: 14.2px;
+    height: 15.62px;
+  }
+
+  .profile-img {
+    margin-right: 12.07px;
+    width: 56.8px;
+    height: 56.8px;
+  }
+
+  .profile-img-img {
+    width: 56.8px;
+    height: 56.8px;
+  }
+
+  .profile-name {
+    font-size: 10.65px;
+    line-height: 19.88px;
+    color: rgba(27, 31, 59, 0.8);
+  }
+
+  .dropdown {
+    position: relative;
+    margin-top: 113.6px;
+  }
+
+  .dropdown-menu {
+    padding-top: 9.23px;
+    background: #FBFBF5;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 7px;
+    visibility: hidden;
+    opacity: 0;
+    z-index: -1;
+    transition: all .2s ease-out;
+  }
+
+  .dropdown-menu.show {
+    z-index: 99;
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .dropdown-menu a {
+    display: block;
+    color: #494C62;
+    padding: 7.81px 7.81px;
+    opacity: 0.7;
+  }
+
+  .dropdown-menu a:hover {
+    opacity: 1;
+  }
+
+  .btn-settings {
+    width: 7.1px;
+    height: 7.1px;
+    position: relative;
+  }
+
+  .btn-settings-img {
+    width: 7.1px;
+    height: 7.1px;
+  }
+
+  .settings li {
+    position: relative;
+  }
+
+  /* .settings li a {
+    display: block;
+  } */
 }
-
-.header-right-side {
-  display: flex;
-  vertical-align: middle;
-  align-items: center;
-}
-
-.title {
-  font-family: 'Open Sans';
-  font-weight: 300;
-  font-size: 48px;
-  line-height: 65px;
-  margin-right: 19px;
-}
-
-.logo-img {
-  position: absolute;
-  width: 50px;
-  height: 49.74px;
-  left: 153px;
-  top: 60px;
-
-  background: linear-gradient(341.04deg, #BEDAC3 10.49%, rgba(255, 255, 255, 0) 100.29%);
-  filter: drop-shadow(0px 7.935px 19.8375px rgba(250, 196, 201, 0.2));
-  transform: rotate(117.88deg);
-  border-radius: 50%;
-}
-
-.location-img {
-  margin-top: 10px;
-  margin-right: 13px;
-}
-
-.location-name {
-  margin-top: 10px;
-}
-
-.btn-add-coworking {
-  background: #E0E0D6;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.16);
-  border-radius: 10px;
-  width: 211px;
-  height: 54px;
-  margin-right: 29px;
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 28px;
-  color: rgba(27, 31, 59, 0.6);
-}
-
-.btn-notification {
-  height: 22px;
-  margin-right: 42px;
-}
-
-.profile-img {
-  margin-right: 17px;
-}
-
-.profile-name {
-  font-size: 15px;
-  line-height: 28px;
-  color: rgba(27, 31, 59, 0.8);
-}
-
-.dropdown {
-  position: relative;
-  margin-top: 160px;
-}
-
-.dropdown-menu {
-  padding-top: 13px;
-  background: #FBFBF5;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 7px;
-  visibility: hidden;
-  opacity: 0;
-  z-index: -1;
-  transition: all .2s ease-out;
-}
-
-.dropdown-menu.show {
-  z-index: 99;
-  visibility: visible;
-  opacity: 1;
-}
-
-.dropdown-menu a {
-  display: block;
-  color: #494C62;
-  padding: 11px 11px;
-  opacity: 0.7;
-}
-
-.dropdown-menu a:hover {
-  opacity: 1;
-}
-
-.btn-settings {
-  height: 10px;
-  position: relative;
-}
-
-
-
-.settings li {
-  position: relative;
-}
-
-/* .settings li a {
-  display: block;
-} */
